--- a/style/style.css
+++ b/style/style.css
@@ -153,15 +153,6 @@ nav a:hover {
     flex: 1;
     padding-right: 100px;
 }
-
-.history-text h2 {
-    color: #333;
-}
-
-.history-text p {
-    color: #555;
-}
-
 .history-image {
     flex: 1;
     overflow: hidden;
@@ -177,7 +168,7 @@ nav a:hover {
 .history-image p{
     font-size: 12px;
     text-align: center;
-    color: #555;
+    color: #4f4d4d;
 }
 
 /* AWARDS */
@@ -252,12 +243,10 @@ nav a:hover {
 }
 
 .news-content h3 {
-    color: #333;
     margin-bottom: 10px;
 }
 
 .news-content p {
-    color: #555;
     margin-bottom: 20px;
 }
 
@@ -385,7 +374,6 @@ nav a:hover {
 }
 
 .project-section h2 {
-    color: #333333;
     font-size: 30px;
     margin-bottom: 15px;
 }
@@ -393,7 +381,7 @@ nav a:hover {
 .project {
     display: flex;
     padding: 15px;
-    background-color: #fff;
+    background-color:white;
     border-radius: 8px;
 }
 
@@ -410,9 +398,6 @@ nav a:hover {
     line-height: 2;
 }
 
-.project img {
-    border: 1px solid #ddd;
-}
 
 header h1 {
     font-size: 2em;
@@ -431,12 +416,8 @@ header h1 {
     border-radius: 8px;
 }
 
-.about-us h1, .about-us h2 {
-    color: #333;
-}
-
 .about-us p {
-    line-height: 1.6;
+    line-height: 1.8;
     margin-bottom: 15px;
 }
 
